templates part 1 done

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -5,9 +5,21 @@
     <title>Учу Django</title>
 </head>
 <body>
-    <h2>{{ header }}</h2>
-    <p>Имя: {{ user.name }} | Возраст: {{ user.age }}</p>
-    <p>Адрес: ул {{ address.0 }}, д. {{ address.1 }}, кв. {{ address.2 }}</p>
-    <p>Языки: {{ langs.0 }}, {{ langs.1 }} </p>
+    <p>Год в виде четырех цифр - {% now 'Y' %}</p>
+<p>Год в виде последних двух цифр - {% now 'y' %}</p>
+<p>Полное название месяца - {% now 'F' %}</p>
+<p>Сокращенное название месяца - {% now 'M' %}</p>
+<p>Номер месяца, с ведущим нулём - {% now 'm' %}</p>
+<p>Номер месяца, без ведущего нуля - {% now 'n' %}</p>
+<p>Аббревиатура месяца  - {% now 'N' %}</p>
+<p>День месяца, с ведущим нулём - {% now 'd' %}</p>
+<p>День месяца, без ведущего нуля - {% now 'j' %}</p>
+<p>День недели - текст - {% now 'l' %}</p>
+<p>Часы (0-12) - {% now 'h' %}</p>
+<p>Часы (0-24) - {% now 'H' %}</p>
+<p>Минуты (0-59) - {% now 'i' %}</p>
+<p>Секунды (0-59) - {% now 's' %}</p>
+<p>Дата (день/месяц/год) - {% now 'j/m/Y' %}</p>
+<p>Время (час:мин:сек) - {% now 'H:i:s' %}</p>
 </body>
 </html>
