--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
 </nav>
 <h1>{% block title_h1 %}{% endblock title_h1 %}</h1>
 <div>{% block content %}{% endblock content %}</div>
+{% include "blog/banner.html" with tutorial='Учу Джанго' site='stepik.org' %}
 <footer>
     <div>MyCorp. 2025. All rights reserved.</div>
 </footer>
