--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Django 5</title>
-</head>
-<body>
-{% block body %}
-    Главная страница
-{% endblock body %}
-</body>
+<html>
+    <head>
+        <title>{% block title %}Default title{% endblock %}</title>
+    </head>
+    <body>
+        <header>
+        {% block header %}
+            <nav>
+                <ul>
+                    <li><a href="{% url 'blog:home' %}">Главная</a></li>
+                    <li><a href="{% url 'blog:about' %}">О нас</a></li>
+                    <li><a href="{% url 'blog:contact' %}">Контакты</a></li>
+                </ul>
+            </nav>
+        {% endblock %}
+        </header>
+
+        <main>
+        {% block content %}
+            <div>
+                <h1>My Website</h1>
+                <p>This is the default content.</p>
+            </div>
+        {% endblock %}
+        </main>
+
+        <footer>
+        {% block footer %}
+             <div>&copy; {{ site }} 2023-{% now 'Y' %}. All rights reserved.</div>
+        {% endblock %}
+        </footer>
+    </body>
 </html>
